<package format="2">
  <name>laser_scan_matcher</name>
  <version>0.3.2</version>
  <description>
    <p>
     An incremental laser scan matcher, using Andrea Censi's Canonical Scan Matcher (CSM) implementation. See <a href="http://censi.mit.edu/software/csm/">the web site</a> for more about CSM. NOTE the CSM library is licensed under the GNU Lesser General Public License v3, whereas the rest of the code is released under the BSD license.
    </p>
  </description>
  <maintainer email="ccnyroboticslab@gmail.com">Ivan Dryanovski</maintainer>
  <maintainer email="cjaramillo@gc.cuny.edu">Carlos</maintainer>
  <maintainer email="dev@opensource-robotics.tokyo.jp">Isaac I.Y. Saito</maintainer>

  <url>http://wiki.ros.org/laser_scan_matcher</url>
  <author>Ivan Dryanovski</author>
  <author>William Morris</author>
  <author>Andrea Censi</author>

  <license>BSD</license>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>csm</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>csm</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <nodelet plugin="${prefix}/laser_scan_matcher_nodelet.xml" />
  </export>

</package>
