<package format="2">
  <name>laser_scan_sparsifier</name>
  <version>0.3.2</version>
  <description>
    The laser_scan_sparsifier takes in a LaserScan message and sparsifies it.
  </description>
  <maintainer email="ccnyroboticslab@gmail.com">Ivan Dryanovski</maintainer>
  <maintainer email="cjaramillo@gc.cuny.edu">Carlos</maintainer>

  <url>http://wiki.ros.org/laser_scan_matcher</url>
  <author>Ivan Dryanovski</author>
  <author>William Morris</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <nodelet plugin="${prefix}/laser_scan_sparsifier_nodelet.xml" />
  </export>

</package>
