<package format="2">
  <name>ncd_parser</name>
  <version>0.3.2</version>
  <description>
     The ncd_parser package reads in .alog data files from the New College Dataset and broadcasts scan and odometry messages to ROS.
  </description>
  <maintainer email="ccnyroboticslab@gmail.com">Ivan Dryanovski</maintainer>
  <maintainer email="cjaramillo@gc.cuny.edu">Carlos</maintainer>

  <url>http://wiki.ros.org/ncd_parser</url>
  <author>Ivan Dryanovski</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
